--- a/index.html
+++ b/index.html
@@ -324,7 +324,8 @@ async function startUpload(){
         lat: hasLoc ? lat : '',
         lng: hasLoc ? lng : '',
         category: catEl.value || '',
-        video_id: videoId
+        video_id: videoId,
+        status: privacyEl.value
       });
     }
 
