--- a/index.html
+++ b/index.html
@@ -324,8 +324,7 @@ async function startUpload(){
         lat: hasLoc ? lat : '',
         lng: hasLoc ? lng : '',
         category: catEl.value || '',
-        video_id: videoId,
-        status: privacyEl.value
+        video_id: videoId
       });
     }
 
