--- a/index.html
+++ b/index.html
@@ -557,21 +557,21 @@ function pickCustomCategoryFromAI({ title = '', desc = '', tags = [] }) {
 
   // 你的下拉選項（必須與 <select id="category"> 的文字完全一致）
   const categories = [
-    '城市漫遊','文化/歷史','自然風光','美食探索','交通紀錄','住宿體驗',
-    '冒險挑戰','休閒放鬆','特殊活動'
+    '城市漫遊','文化歷史','自然風光','美食探索','交通紀錄','住宿體驗',
+    '冒險挑戰','休閒放鬆','活動寫照'
   ];
 
   // 關鍵字字典（可依需要自行補強）
   const dict = {
     '城市漫遊': ['城市','街頭','老街','市區','downtown','city walk','urban'],
-    '文化/歷史': ['博物館','古蹟','神廟','遺址','歷史','文化','heritage','museum','temple'],
+    '文化歷史': ['博物館','古蹟','神廟','遺址','歷史','文化','heritage','museum','temple'],
     '自然風光': ['山','海','湖','瀑布','步道','國家公園','沙漠','日出','夕陽','自然','trail','hike','waterfall','national park'],
     '美食探索': ['美食','小吃','餐廳','咖啡','市場','夜市','料理','吃','tasty','food','street food','cafe'],
     '交通紀錄': ['火車','地鐵','高鐵','電車','公車','飛機','航班','機場','捷運','渡輪','tram','train','metro','bus','flight','airport','ferry','drive','road trip'],
     '住宿體驗': ['飯店','旅館','青旅','民宿','露營車','check-in','check in','房型','住宿','hotel','hostel','camp'],
     '冒險挑戰': ['攀岩','潛水','衝浪','跳傘','滑雪','健行挑戰','越野','極限','冒險','surf','dive','ski','climb','paragliding','challenge'],
     '休閒放鬆': ['溫泉','海灘','度假','放空','咖啡廳','spa','relax','resort','chill','beach'],
-    '特殊活動': ['節慶','煙火','遊行','演唱會','慶典','祭典','婚禮','活動','festival','parade','concert','event']
+    '活動寫照': ['節慶','煙火','遊行','演唱會','慶典','祭典','婚禮','活動','festival','parade','concert','event']
   };
 
   // 計分
