--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="row" style="margin-top:8px;">
       <select id="privacy" required>
-        <option value="unlisted">不公開（建議測試）</option>
+        <option value="unlisted">不公開</option>
         <option value="public">公開</option>
         <option value="private">私人</option>
       </select>
@@ -86,13 +86,13 @@
       <div>
         <label>旅遊分類</label>
         <select id="category" required>
-          <option value="">（選擇分類）</option>
+          <option value=""></option>
           <optgroup label="旅遊主題">
-            <option>城市漫遊</option><option>文化/歷史</option><option>自然風光</option>
+            <option>城市漫遊</option><option>文化歷史</option><option>自然風光</option>
             <option>美食探索</option><option>交通紀錄</option><option>住宿體驗</option>
           </optgroup>
           <optgroup label="活動型態">
-            <option>冒險挑戰</option><option>休閒放鬆</option><option>特殊活動</option>
+            <option>冒險挑戰</option><option>休閒放鬆</option><option>活動寫照</option>
           </optgroup>
         </select>
       </div>
