--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ function pickCustomCategoryFromAI({ title = '', desc = '', tags = [] }) {
     '住宿體驗': ['飯店','旅館','青旅','民宿','露營車','check-in','check in','房型','住宿','hotel','hostel','camp'],
     '冒險挑戰': ['攀岩','潛水','衝浪','跳傘','滑雪','健行挑戰','越野','極限','冒險','surf','dive','ski','climb','paragliding','challenge'],
     '休閒放鬆': ['溫泉','海灘','度假','放空','咖啡廳','spa','relax','resort','chill','beach'],
-    '活動寫照': ['節慶','煙火','遊行','演唱會','慶典','祭典','婚禮','活動','festival','parade','concert','event']
+    '活動寫照': ['節慶','煙火','遊行','演唱會','慶典','祭典','婚禮','活動','街頭藝人','表演','festival','parade','concert','event']
   };
 
   // 計分
