--- a/index.html
+++ b/index.html
@@ -155,6 +155,17 @@ const bar=el('bar'), statusEl=el('status'), progressText=el('progressText'), res
 // 片長（秒）
 let durationSec = null;
 
+const RETURN_URL_BASE = 'https://www.yourjovi.com/?view=timeline';
+
+// 依來源組出完整連結，帶 UTM 方便 GA 追蹤
+function buildReturnUrl(utmMedium='uploader') {
+  const url = new URL(RETURN_URL_BASE);
+  url.searchParams.set('utm_source', 'youtube');
+  url.searchParams.set('utm_medium', utmMedium);
+  url.searchParams.set('utm_campaign', 'return');
+  return url.toString();
+}
+
 function formatDuration(sec){
   if (!Number.isFinite(sec)) return '';
   sec = Math.max(0, Math.round(sec));
