--- a/index.html
+++ b/index.html
@@ -396,12 +396,7 @@ async function startUpload(){
       setStatus('上傳中…');
     });
     if (!videoId) throw new Error('未取得 videoId');
-    try {
-  await waitVideoReadyForComments(videoId, { maxWaitMs: 60000, intervalMs: 3000 });
-  await postReturnComment(videoId); // 之後到影片頁手動「置頂」
-} catch (e) {
-  console.warn('發留言失敗或尚未可留言：', e);
-}
+    try { await postReturnComment(videoId); } catch(e){ console.warn(e); }
 
     const PLAYLIST_TITLE = "即時旅行分享";
     const playlistId = await ensurePlaylist(PLAYLIST_TITLE);
@@ -554,38 +549,6 @@ async function addVideoToPlaylist(videoId, playlistId){
   if (!res.ok) throw new Error("加入播放清單失敗：" + (await res.text()).slice(0,300));
 }  
 
-// 1) 等待影片「處理完成」且狀態可留言
-async function waitVideoReadyForComments(videoId, { maxWaitMs = 60000, intervalMs = 3000 } = {}) {
-  const start = Date.now();
-  while (Date.now() - start < maxWaitMs) {
-    const url = new URL('https://www.googleapis.com/youtube/v3/videos');
-    url.searchParams.set('part', 'status,processingDetails');
-    url.searchParams.set('id', videoId);
-    const res = await fetch(url, { headers: { Authorization: 'Bearer ' + accessToken } });
-    const j = await res.json();
-
-    const v = j?.items?.[0];
-    if (!v) throw new Error('video not found');
-
-    const uploadStatus = v.status?.uploadStatus;          // uploaded / processed / failed ...
-    const privacy      = v.status?.privacyStatus;         // public / unlisted / private
-    const madeForKids  = v.status?.madeForKids || v.status?.selfDeclaredMadeForKids;
-    const procStatus   = v.processingDetails?.processingStatus; // processing / succeeded / failed
-
-    // 條件：處理成功 + 不是 private + 不是 kids
-    if (procStatus === 'succeeded' && uploadStatus === 'processed' && privacy !== 'private' && !madeForKids) {
-      return true;
-    }
-    // 若已失敗就別等
-    if (procStatus === 'failed' || uploadStatus === 'failed') {
-      throw new Error('video processing failed');
-    }
-    await new Promise(r => setTimeout(r, intervalMs));
-  }
-  // 超時也放行嘗試一次，避免卡住（之後用錯誤回傳判斷）
-  return false;
-}  
-  
 async function postReturnComment(videoId){
   const text = `👉 更多完整行程與地圖：\n${buildReturnUrl('comment')}`;
   const res = await fetch('https://www.googleapis.com/youtube/v3/commentThreads?part=snippet', {
