--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ const bar=el('bar'), statusEl=el('status'), progressText=el('progressText'), res
 // 片長（秒）
 let durationSec = null;
 
-const RETURN_URL_BASE = 'https://www.yourjovi.com/?view=timeline';
+const RETURN_URL_BASE = 'http://www.yourjovi.com/';
 
 // 依來源組出完整連結，帶 UTM 方便 GA 追蹤
 function buildReturnUrl(utmMedium='uploader') {
